Async API calls instead, non blocking.
Took 27 minutes